@@ -8,6 +8,14 @@
 
 	* config.c: better handling of empty/comment only lines
 
+2017-07-17  Ron Norman <rjn@inglenet.com>
+
+	* tree.c: in cb_build_binary_op provide details on why an
+	  expression is always TRUE or FALSE and better indicate which
+	  line this happened on
+	* tree.c: in cb_build_binary_op check for '@' parens operator
+	  with a numeric literal inside the parens
+
 2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: only allow RETURNING/GIVING in EXIT PROGRAM/GOBACK
